--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-donut-chart": "^1.3.1",
     "react-google-material-icons": "^1.0.4",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0"
