--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "react-dom": "^18.1.0",
     "react-donut-chart": "^1.3.1",
     "react-google-material-icons": "^1.0.4",
+    "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "redux": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
