--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.27.2",
+    "jquery": "^3.6.1",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.1.0",
     "react-donut-chart": "^1.3.1",
     "react-google-material-icons": "^1.0.4",
