--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "axios": "^0.27.2",
     "jquery": "^3.6.1",
     "react": "^18.1.0",
